--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <div class="page home-page active" id="home-page">
                 <div class="balance-card">
                     <div class="balance-title">Solde principal</div>
-                    <div class="balance-amount">XAF 780 245,<small>90</small></div>
+                    <div class="balance-amount">XAF 780 245,<small>00</small></div>
                     <div class="balance-details">
                         <div class="balance-detail">
                             <div>Revenus mensuels</div>
-                            <div class="detail-value">XAF 245 200</div>
+                            <div class="detail-value">XAF 245 200,<small>00</small></div>
                         </div>
                         <div class="divider"></div>
                         <div class="balance-detail">
                             <div>Dépenses mensuelles</div>
-                            <div class="detail-value">XAF 133 274,<small>10</small></div>
+                            <div class="detail-value">XAF 133 274,<small>00</small></div>
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                             <select id="pickup-location" required>
                                 <option value="" disabled selected>Choisir un point de retrait</option>
                                 <option value="main">Agence K-BANK</option>
-                                <option value="partner1">K-BANK partenaire 1 bord de mer</option>
+                                <option value="partner1">K-BANK partenaire 1 Bord de mer</option>
                                 <option value="partner2">K-BANK partenaire 2 Centre-ville</option>
                                 <option value="partner3">K-BANK partenaire 3 en face du consulat de France</option>
                                 <option value="partner4">K-BANK partenaire marché Mont Bouet</option>
