--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <div class="page home-page active" id="home-page">
                 <div class="balance-card">
                     <div class="balance-title">Solde principal</div>
-                    <div class="balance-amount">XAF 780 245,<small>00</small></div>
+                    <div class="balance-amount">F <h5>cfa</h5> 780 245,<small>00</small></div>
                     <div class="balance-details">
                         <div class="balance-detail">
                             <div>Revenus mensuels</div>
-                            <div class="detail-value">XAF 245 200,<small>00</small></div>
+                            <div class="detail-value">F <h5>cfa</h5> 245 200,<small>00</small></div>
                         </div>
                         <div class="divider"></div>
                         <div class="balance-detail">
                             <div>Dépenses mensuelles</div>
-                            <div class="detail-value">XAF 133 274,<small>00</small></div>
+                            <div class="detail-value">F <h5>cfa</h5> 133 274,<small>00</small></div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de paiement</div>
-                            <div class="card-meta">XAF 500 000 / jour</div>
+                            <div class="card-meta">F <h5>CFA</h5> 500 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de retrait</div>
-                            <div class="card-meta">XAF 200 000 / jour</div>
+                            <div class="card-meta">F <h5>CFA</h5> 200 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -684,7 +684,7 @@
             </div>
 
             <!-- Bouton flottant K-Shop -->
-            <div class="kshop-float" onclick="switchTab('kshop')">
+            <div class="kshop-float" onclick="openKShop()">
                 <div class="kshop-icon">
                     <i class="fas fa-shopping-cart"></i>
                 </div>
