--- a/index.html
+++ b/index.html
@@ -702,6 +702,18 @@
                                 <img src="assets/logos/mbolo-logo.png" alt="Mbolo Gabon">
                                 <span>Mbolo Gabon</span>
                             </div>
+                            <div class="shop-item" onclick="openShop('airtel')">
+                                <img src="assets/logos/airtel-money.png" alt="Airtel Money">
+                                <span>Airtel Money</span>
+                            </div>
+                            <div class="shop-item" onclick="openShop('moov')">
+                                <img src="assets/logos/moov.png" alt="Moov Money">
+                                <span>Moov Money</span>
+                            </div>
+                            <div class="shop-item" onclick="openShop('western')">
+                                <img src="assets/logos/Western-union.png" alt="Western Union">
+                                <span>Western Union</span>
+                            </div>
                         </div>
                     </div>
 
@@ -792,7 +804,32 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Autres partenaires vedettes... -->
+                            <div class="partner-card featured">
+                                <div class="partner-banner">
+                                    <img src="assets/logos/airtel-money.png" alt="Airtel Money">
+                                    <div class="partner-discount">-10%</div>
+                                </div>
+                                <div class="partner-info">
+                                    <img src="assets/logos/airtel-money.png" alt="Airtel Money" class="partner-logo">
+                                    <div class="partner-details">
+                                        <h4>Airtel Money</h4>
+                                        <p>Services Mobile Money</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="partner-card featured">
+                                <div class="partner-banner">
+                                    <img src="assets/logos/Western-union.png" alt="Western Union">
+                                    <div class="partner-discount">-5%</div>
+                                </div>
+                                <div class="partner-info">
+                                    <img src="assets/logos/Western-union.png" alt="Western Union" class="partner-logo">
+                                    <div class="partner-details">
+                                        <h4>Western Union</h4>
+                                        <p>Transferts internationaux</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -833,7 +870,38 @@
                                     <span class="partner-badge">-15% avec K-Bank</span>
                                 </div>
                             </div>
-                            <!-- Autres partenaires... -->
+                            <div class="partner-item" onclick="openPartner('airtel')">
+                                <img src="assets/logos/airtel-money.png" alt="Airtel Money" class="partner-logo">
+                                <div class="partner-info">
+                                    <h4>Airtel Money</h4>
+                                    <p>Services Mobile Money</p>
+                                    <span class="partner-badge">-10% frais transfert</span>
+                                </div>
+                            </div>
+                            <div class="partner-item" onclick="openPartner('moov')">
+                                <img src="assets/logos/moov.png" alt="Moov Money" class="partner-logo">
+                                <div class="partner-info">
+                                    <h4>Moov Money</h4>
+                                    <p>Services Mobile Money</p>
+                                    <span class="partner-badge">-8% frais transfert</span>
+                                </div>
+                            </div>
+                            <div class="partner-item" onclick="openPartner('western')">
+                                <img src="assets/logos/Western-union.png" alt="Western Union" class="partner-logo">
+                                <div class="partner-info">
+                                    <h4>Western Union</h4>
+                                    <p>Transferts internationaux</p>
+                                    <span class="partner-badge">-5% commission</span>
+                                </div>
+                            </div>
+                            <div class="partner-item" onclick="openPartner('gabon')">
+                                <img src="assets/logos/gabon-logo.png" alt="Services Gabon" class="partner-logo">
+                                <div class="partner-info">
+                                    <h4>Services Gabon</h4>
+                                    <p>Services gouvernementaux</p>
+                                    <span class="partner-badge">Paiement instantané</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
