--- a/index.html
+++ b/index.html
@@ -584,22 +584,7 @@
                 </div>
 
                 <div class="topup-form">
-                    <div class="input-group">
-                        <label>Montant à recharger</label>
-                        <div class="input-field">
-                            <input type="number" id="topup-amount" placeholder="0">
-                            <span class="currency">XAF</span>
-                        </div>
-                    </div>
-
-                    <div class="input-group">
-                        <label>Numéro de téléphone</label>
-                        <div class="input-field">
-                            <input type="tel" id="phone-number" placeholder="+241">
-                        </div>
-                    </div>
-
-                    <button class="primary-button" onclick="processTopup()" id="topup-button" disabled>
+                    <button class="primary-button" onclick="processTopup()" id="topup-button">
                         <i class="fas fa-plus-circle"></i>
                         <span>Recharger maintenant</span>
                     </button>
@@ -837,19 +822,19 @@
                         <div class="category-grid">
                             <div class="category-item">
                                 <div class="category-icon">
-                                    <i class="fas fa-utensils"></i>
+                                    <img src="./assets/restauration.jpg" alt="Restauration" class="category-image">
                                 </div>
                                 <span>Restauration</span>
                             </div>
                             <div class="category-item">
                                 <div class="category-icon">
-                                    <i class="fas fa-shopping-bag"></i>
+                                    <img src="./assets/logos/shopping.png" alt="Shopping" class="category-image">
                                 </div>
                                 <span>Shopping</span>
                             </div>
                             <div class="category-item">
                                 <div class="category-icon">
-                                    <i class="fas fa-ticket-alt"></i>
+                                    <img src="./assets/logos/loisirs.jpg" alt="Loisirs" class="category-image">
                                 </div>
                                 <span>Loisirs</span>
                             </div>
