--- a/index.html
+++ b/index.html
@@ -89,28 +89,28 @@
                 </div>
                 
                 <div class="cards-container">
-                    <!-- Carte principale -->
-                    <div class="bank-card primary" id="main-card">
-                        <div class="card-header">
-                            <div class="card-logo">K-BANK</div>
-                            <div class="card-status" id="card-status">Active</div>
-                        </div>
-                        <div class="card-chip">
-                            <i class="fas fa-microchip"></i>
-                        </div>
-                        <div class="card-number">•••• •••• •••• 4562</div>
-                        <div class="card-footer">
-                            <div class="card-details">
-                                <div>
-                                    <div class="card-label">Titulaire</div>
-                                    <div class="card-value">Godwin Batola</div>
+                    <!-- Carte principale moderne -->
+                    <div class="modern-card-container">
+                        <div class="modern-card" id="main-card">
+                            <div class="modern-card-face modern-card-front">
+                                <div class="card-status" id="card-status">Active</div>
+                                <div class="logo-puce">
+                                    <div class="chip"></div>
+                                    <div class="bank-logo">K-BANK</div>
                                 </div>
-                                <div>
-                                    <div class="card-label">Expire</div>
-                                    <div class="card-value">09/25</div>
+                                <div class="modern-card-number">•••• •••• •••• 4562</div>
+                                <div class="card-bottom-info">
+                                    <div class="card-holder-info">
+                                        <div class="label">Titulaire</div>
+                                        <div class="card-holder-name">GODWIN BATOLA</div>
+                                    </div>
+                                    <div class="card-expiry-info">
+                                        <div class="label">Expire fin</div>
+                                        <div class="card-expiry-date">09/25</div>
+                                    </div>
+                                    <div class="card-brand">VISA</div>
                                 </div>
                             </div>
-                            <div class="card-brand">VISA</div>
                         </div>
                     </div>
                     
