--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     <div class="modern-card-container">
                         <div class="modern-card" id="main-card">
                             <div class="modern-card-face modern-card-front">
-                                <div class="card-status" id="card-status">Active</div>
+                                <div class="bank-name-left">K-BANK</div>
                                 <div class="logo-puce">
-                                    <div class="chip"></div>
-                                    <div class="bank-logo">K-BANK</div>
+                                    <img src="assets/chip.svg" alt="Chip" class="chip-image">
+                                    <div class="bank-logo">VISA</div>
                                 </div>
                                 <div class="modern-card-number">•••• •••• •••• 4562</div>
                                 <div class="card-bottom-info">
@@ -108,7 +108,10 @@
                                         <div class="label">Expire fin</div>
                                         <div class="card-expiry-date">09/25</div>
                                     </div>
-                                    <div class="card-brand">VISA</div>
+                                    <div class="card-cvc-info">
+                                        <div class="label">CVC</div>
+                                        <div class="card-cvc">•••</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -123,10 +126,6 @@
                         <button class="card-action" onclick="switchTab('order-card')">
                             <i class="fas fa-plus-circle"></i>
                             <span>Commander</span>
-                        </button>
-                        <button class="card-action" onclick="switchTab('card-settings')">
-                            <i class="fas fa-sliders-h"></i>
-                            <span>Paramètres</span>
                         </button>
                     </div>
                     
