--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                 <div class="iban-container">
                     <div class="iban-card">
                         <div class="iban-card-header">
-                            <img src="assets/logos/gabon-logo.png" alt="Gabon" class="gabon-logo">
+                            <div class="kb-logo">KB</div>
                             <div class="card-type">Compte Courant</div>
                         </div>
                         
@@ -607,6 +607,11 @@
                             <div class="detail-item">
                                 <div class="detail-label">Banque</div>
                                 <div class="detail-value">K-BANK GABON</div>
+                            </div>
+                            <div class="detail-item">
+                                <div class="detail-label">Adresse</div>
+                                <div class="detail-value">Quartier Louis derrière Jeanne Ebori,
+BP 20000 Libreville</div>
                             </div>
                         </div>
                     </div>
