--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     </div>
                     
                     <div class="input-group">
-                        <label>Montant (F <h6>cfa</h6>)</label>
+                        <label>Montant (Fcfa)</label>
                         <div class="input-field">
                             <input type="number" placeholder="0,00" id="virement-amount">
                         </div>
